p7/tests/t066.err
Semantic error on line 6: Cannot -= an expression of type 'string' from a variable of type 'double'.
