p7/tests/t066.gpl
double x = 3.145;
string str = "hello";

on akey
{
    x -= str;
}
